# mira-sdk-python

./: .bumpversion.cfg  .gitignore  README.md  demo.py  flow.yaml  klokc_flow.yml  main.py  mermaid.md  my_flow.yaml  pipeline_structure.yaml  pyproject.toml  setup.py  test.yml  writing_tips.txt
.github/workflows/: create-tag-publish-package.yml  prod_deploy.yml  pypi-deploy.yml  review_pr.yml
chroma_db/: chroma.sqlite3
data/: tanstack.md
examples/: builder_example.py  generate_story.py  roast.yaml  test.py  use_client.py
flow/: entities.yml  summarizer.yml  youtube.yml
flows/: create_entities.yml  example_flow.yaml  flow-one.yaml  messi.yaml  my_flow.yaml  person.yaml  sample_flow.yaml
memory/: hapchap.md
mira_sdk/: __init__.py  client.py
mira_sdk/mira/: constants.py  flow.py
mira_sdk/mira/client/: console.py  mira_client.py
mira_sdk/mira/models/: file_url_utils.py
mira_sdk/mira/templates/: person.yaml
mira_sdk/mira/utils/: process_file.py  util.py
prompts/: create_tweet_thread.md  entity_extraction.md
src/: main.py
src/data/: index.md  prompt_engineering.md
src/mira/: __init__.py  components.py  constants.py  flow.py  resources.py
src/mira/builder/: flow_builder.py
src/mira/cli/: mira_cli.py  utils.py
src/mira/client/: async_console.py  async_mira_client.py  console.py  mira_client.py
src/mira/templates/: new.yaml  person.yaml  writing_tips.txt
src/mira_python_sdk/: main.py  parser.py
src/prompts/: db.csv
src/templates/: person.yaml  writing_tips.txt
src/yaml_generator/: math_custom.py  workflow.py
tests/: test_async.py  test_new.py
