[project]
name = "mira-cli"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sarim2000", email = "sarimbleedblue@gmail.com"},
]
dependencies = [
    "openai>=1.42.0",
    "youtube-transcript-api>=0.6.2",
    "typer>=0.12.5",
    "python-dotenv>=1.0.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
_.env_file = ".env"
