[project]
name = "mira-sdk"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sarim2000", email = "sarimbleedblue@gmail.com"},
]
dependencies = [
    "pyyaml>=6.0.2",
    "openai>=1.43.0",
    "click>=8.1.7",
    "requests>=2.32.3",
    "semantic-version>=2.10.0",
    "aiohttp>=3.10.10",
    "pytest-asyncio>=0.24.0",
    "build>=1.2.2.post1",
    "twine>=5.1.1",
    "setuptools>=75.6.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false


